--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ version = "0.1.0"
 
 [dependencies]
 cgmath = "0.15.0"
+image = "0.23.14"
 vulkano = "0.26.0"
 vulkano-shaders = "0.26.0"
 vulkano-win = "0.26.0"
