--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ version = "0.1.0"
 [dependencies]
 cgmath = "0.15.0"
 image = "0.23.14"
+tobj = "3.2.0"
 vulkano = "0.26.0"
 vulkano-shaders = "0.26.0"
 vulkano-win = "0.26.0"
