--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cgmath = "0.15.0"
+dolly = "0.1.4"
+glam = "0.20.1"
 image = "0.23.14"
 tobj = "3.2.0"
 vulkano = "0.26.0"
