--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ version = "0.1.0"
 [dependencies]
 dolly = "0.1.4"
 glam = "0.20.1"
+gltf = "0.16.0"
 image = "0.23.14"
 tobj = "3.2.0"
 vulkano = "0.26.0"
