--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ base64 = "0.13.0"
 glam = "0.20.1"
 gltf = "0.16.0"
 image = "0.23.14"
+ktx = "0.3.2"
 vulkano = "0.26.0"
 vulkano-shaders = "0.26.0"
 vulkano-win = "0.26.0"
