--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ image = "0.23.14"
 imgui = "0.8.0"
 imgui-winit-support = "0.8.0"
 ktx = "0.3.2"
+rand = "0.8.4"
 vulkano = "0.26.0"
 vulkano-shaders = "0.26.0"
 vulkano-win = "0.26.0"
