--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ imgui = "0.8.0"
 imgui-winit-support = "0.8.0"
 ktx = "0.3.2"
 rand = "0.8.4"
-vulkano = "0.27.1"
-vulkano-shaders = "0.27.1"
-vulkano-win = "0.27.1"
+vulkano = {git = "https://github.com/baransu/vulkano", rev = "c59ea93c"}
+vulkano-shaders = {git = "https://github.com/baransu/vulkano", rev = "c59ea93c"}
+vulkano-win = {git = "https://github.com/baransu/vulkano", rev = "c59ea93c"}
 winit = "0.25.0"
