--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ version = "0.1.0"
 [dependencies]
 base64 = "0.13.0"
 glam = "0.20.1"
-gltf = "0.16.0"
 image = "0.23.14"
 imgui = "0.8.0"
 imgui-winit-support = "0.8.0"
@@ -19,3 +18,7 @@ vulkano = {git = "https://github.com/baransu/vulkano", rev = "c59ea93c"}
 vulkano-shaders = {git = "https://github.com/baransu/vulkano", rev = "c59ea93c"}
 vulkano-win = {git = "https://github.com/baransu/vulkano", rev = "c59ea93c"}
 winit = "0.25.0"
+
+[dependencies.gltf]
+features = ["extras", "names"]
+version = "0.16"
