--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ image = "0.23.14"
 imgui = "0.8.0"
 imgui-winit-support = "0.8.0"
 ktx = "0.3.2"
+puffin = "0.12.1"
+puffin-imgui = "0.15.0"
 rand = "0.8.4"
 vulkano = {git = "https://github.com/baransu/vulkano", rev = "092b1940"}
 vulkano-shaders = {git = "https://github.com/baransu/vulkano", rev = "092b1940"}
