--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "(OSX) Launch",
       "type": "lldb",
       "request": "launch",
-      "program": "${workspaceRoot}/target/debug/rust-vulkan",
+      "program": "${workspaceRoot}/target/debug/view",
       "args": [],
       "cwd": "${workspaceRoot}"
     }
