--- a/crates/bin/view/Cargo.toml
+++ b/crates/bin/view/Cargo.toml
@@ -13,6 +13,7 @@ image = "0.24.1"
 imgui = "0.8.0"
 imgui-winit-support = "0.8.0"
 log = "0.4.14"
+meshopt = "0.1.9"
 puffin = "0.12.1"
 puffin-imgui = "0.15.0"
 rand = "0.8.4"
